CSS-fil og HTML-elementer

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title></title>
+	<link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <script src=""></script>
+
+	<header>
+		<h1>Halløj</h1>
+	</header>
+	<p>Hva' så :) </p>
+	<p>Github...</p>
+	<script src=""></script>
 </body>
+
 </html>
